--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "revolut-test-task",
   "version": "0.1.0",
   "private": true,
+  "author": "Dmitriy Korneev",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dm1Korneev/revolut-test-task.git"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
