--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/ --ext .jsx,.js --color",
+    "lint-fix": "eslint src/ --ext .jsx,.js --color --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
