--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-react": "^7.17.0"
+    "eslint-plugin-react": "^7.17.0",
+    "source-map-explorer": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +34,7 @@
     "test": "react-scripts test",
     "test-coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "lint": "eslint src/ --ext .jsx,.js --color",
     "lint-fix": "eslint src/ --ext .jsx,.js --color --fix"
   },
