--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
+    "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^4.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
