--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "styled-components": "^4.4.1",
+    "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
   },
   "devDependencies": {
