--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "homepage": ".",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -17,7 +18,6 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
-    "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^4.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -25,10 +25,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
-    "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0",
     "styled-components": "^4.4.1",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
