--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,8 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     env:
-        CI: true      
+        CI: true
+        REACT_APP_CURRENCIES_RATE_API_ID: ${{ secrets.REACT_APP_CURRENCIES_RATE_API_ID }}      
     steps:
     - uses: actions/checkout@master
     - name: Set access token
