--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,16 @@
     "max-len": ["error", 140],
     "sort-imports": ["error", {"ignoreDeclarationSort": true}],
     "import/prefer-default-export": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
   },
